# WEB_HW_14

WEB_HW11/: main.py  pyproject.toml  requirements.txt
WEB_HW11/docs/: conf.py
WEB_HW11/docs/_build/doctrees/: environment.pickle  index.doctree
WEB_HW11/docs/_build/html/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
WEB_HW11/docs/_build/html/_sources/: index.rst.txt
WEB_HW11/migrations/versions/: 10a98d9e292b_init.py
WEB_HW11/src/: schemas.py
WEB_HW11/src/database/: db.py  models.py
WEB_HW11/src/repository/: contacts.py  users.py
WEB_HW11/src/routes/: auth.py  contacts.py  users.py
WEB_HW11/src/services/: auth.py
WEB_HW11/test/: testroute.py
