[tool.poetry]
name = "web-hw11"
version = "0.1.0"
description = ""
authors = ["IgorPupynin <98888021+IgorPupynin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.95.2"}
uvicorn = {extras = ["standard"], version = "^0.22.0"}
sqlalchemy = "^2.0.15"
psycopg2 = "^2.9.6"
alembic = "^1.11.1"
libgravatar = "^1.0.4"
passlib = "^1.7.4"
redis = "^4.5.5"
fastapi-mail = "^1.2.8"
fastapi-limiter = "^0.1.5"
cloudinary = "^1.33.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
